--- a/templates/boasvindas.html
+++ b/templates/boasvindas.html
@@ -1,5 +1,8 @@
+{% include "inc/header.html" %}
+
 <h3>Welcome</h3>
 <h3>Usuário autenticado: {{ user }}</h3>
 <p>Parabéns você arcetou tudo!!!</p>
+
 
 <a href="logout.php">Saida</a>
