--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -10,6 +10,8 @@
     <nav>
         <a href="produtos.php">Produtos</a>
         |
+        <a href="usuarios.php">Usuários</a>
+        |
         <a href="testetwig.php">Teste Twig</a>
     </nav>
 </body>
