--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -8,10 +8,13 @@
 </head>
 <body>
     <nav>
-        <a href="produtos.php">Produtos</a>
+        <a href="novo_usuario.php">Novo usuário</a>
         |
         <a href="usuarios.php">Usuários</a>
         |
         <a href="testetwig.php">Teste Twig</a>
+        |
+        <a href="logout.php">Logout</a>
+
     </nav>
 </body>
