--- a/templates/login.html
+++ b/templates/login.html
@@ -15,3 +15,7 @@
         <input type="submit" value="Acessar">
     </div>
 </form>
+
+<div>
+    <a href="recuperar_senha.php">Esqueci minha senha</a>
+</div>
