--- a/templates/recuperar_senha_escolher.html
+++ b/templates/recuperar_senha_escolher.html
@@ -1,9 +1,14 @@
+
 <form action="recuperar_senha_escolher.php" method="post">
+<input type="hidden" name="token" value="{{ token }}">
     <div>
         Digite sua nova ai.
     </div>
     <div>
-        <input type="password" name="senha">
+        <input type="password" name="senha" id="senha">
+        <input type="button" id="olho" value="Olho">
     </div>
     <input type="submit" value="Gravar">
 </form>
+
+<script src="js/olho.js"></script>
