submissão de arquivo

--- a/templates/recuperar_senha_escolher.html
+++ b/templates/recuperar_senha_escolher.html
@@ -1,4 +1,8 @@
-
+{% if msg %}
+<div>
+    {{ msg }}
+</div>
+{% endif %}
 <form action="recuperar_senha_escolher.php" method="post">
 <input type="hidden" name="token" value="{{ token }}">
     <div>
@@ -6,7 +10,8 @@
     </div>
     <div>
         <input type="password" name="senha" id="senha">
-        <input type="button" id="olho" value="Olho">
+        <input type="password" name="senha_confirma" id="senha">
+        <input type="button" id="olho" value="Olho">   
     </div>
     <input type="submit" value="Gravar">
 </form>
