--- a/templates/usuarios.html
+++ b/templates/usuarios.html
@@ -10,7 +10,7 @@
 {% for usr in user %}
         <!-- Linha para repetição -->
         <tr>
-            <td>{{ usr.username }}</td>
+            <td><a href="usuario_ver.php?id={{usr.id}}">{{ usr.username }}</td>
             <td>{{ usr.admin }}</td>
             <td>{{ usr.ativo }}</td>
             <td><a href="usuario_apagar.php?id={{usr.id}}">Apagar</a></td>
