--- a/templates/documentos.html
+++ b/templates/documentos.html
@@ -4,5 +4,5 @@
 {% block conteudo %}
     <h1>Documento</h1>
 
-    <a href="documentos_novo.php">Novo documento</a>
+    <a href="/documentos_novo">Novo documento</a>
 {% endblock %}
