--- a/templates/usuario_apagar.html
+++ b/templates/usuario_apagar.html
@@ -11,7 +11,7 @@
 <input type="submit" value="Apagar">
 </form>
 
-<div><a href="usuarios.php">Cancelar</a></div>
+<div><a href="/usuarios">Cancelar</a></div>
 
 
 
