--- a/templates/inc/base.html
+++ b/templates/inc/base.html
@@ -23,22 +23,22 @@
         <div class="container mx-auto flex items-center">
 		    <div class="flex text-white font-extrabold">
 				<a class="flex text-white text-base no-underline hover:text-white hover:no-underline" href="#"> 
-					👻 <span class="hidden w-0 md:w-auto md:block pl-1">Ghostwind CSS</span>
+					👻 <span class="hidden w-0 md:w-auto md:block pl-1">Chinelo</span>
 				</a>
             </div>
 			<div class="flex pl-4 text-sm">
 				<ul class="list-reset flex justify-between flex-1 md:flex-none items-center">
 				  <li class="mr-2">
-					<a class="inline-block py-2 px-2 text-white no-underline" href="index.html">HOME</a>
+					<a class="inline-block py-2 px-2 text-white no-underline" href="/">HOME</a>
 				  </li>
 				  <li class="mr-2">
-					<a class="inline-block text-gray-600 no-underline hover:text-gray-200 hover:text-underline py-2 px-2" href="#">LINK</a>
+					<a class="inline-block text-gray-600 no-underline hover:text-gray-200 hover:text-underline py-2 px-2" href="/produtos">Produtos</a>
 				  </li>
 				  <li class="mr-2">
-					<a class="inline-block text-gray-600 no-underline hover:text-gray-200 hover:text-underline py-2 px-2" href="#">LINK</a>
+					<a class="inline-block text-gray-600 no-underline hover:text-gray-200 hover:text-underline py-2 px-2" href="/usuarios">Usuários</a>
 				  </li>
 					<li class="mr-2">
-					<a class="inline-block text-gray-600 no-underline hover:text-gray-200 hover:text-underline py-2 px-2" href="#">LINK</a>
+					<a class="inline-block text-gray-600 no-underline hover:text-gray-200 hover:text-underline py-2 px-2" href="/logout">Logout</a>
 				  </li>
 				</ul>
 			</div>
@@ -51,7 +51,7 @@
 			<div class="flex flex-wrap items-center content-center">
 				<div class="flex w-1/2 justify-start text-white font-extrabold">
 					<a class="flex text-gray-900 no-underline hover:text-gray-900 hover:no-underline pl-2" href="#">
-						👻 <span class="hidden w-0 md:w-auto md:block pl-1">Ghostwind CSS</span>
+						👻 <span class="hidden w-0 md:w-auto md:block pl-1">Chinelo</span>
 					</a>
 				</div>
 				<div class="flex w-1/2 justify-end content-center">		
@@ -78,7 +78,7 @@
 	</div>
 
 	<!--image-->
-	<div class="container w-full max-w-6xl mx-auto bg-white bg-cover mt-8 rounded" style="background-image:url('https://source.unsplash.com/collection/1118905/'); height: 75vh;"></div>
+	<div class="container w-full max-w-6xl mx-auto bg-white bg-cover mt-8 rounded" style="background-image:url('https://source.unsplash.com/collection/1118905/'); height: 30vh;"></div>
 	
 	<!--Container-->
 	<div class="container max-w-5xl mx-auto -mt-32">
@@ -208,22 +208,22 @@
 			<div class="w-full mx-auto flex flex-wrap items-center">
 				<div class="flex w-full md:w-1/2 justify-center md:justify-start text-white font-extrabold">
 					<a class="text-gray-900 no-underline hover:text-gray-900 hover:no-underline" href="#">
-						👻 <span class="text-base text-gray-200">Ghostwind CSS</span>
+						👻 <span class="text-base text-gray-200">Chinelo</span>
 					</a>
 				</div>
 				<div class="flex w-full pt-2 content-center justify-between md:w-1/2 md:justify-end">
 					<ul class="list-reset flex justify-center flex-1 md:flex-none items-center">
 					  <li>
-						<a class="inline-block py-2 px-3 text-white no-underline" href="index.html">HOME</a>
+						<a class="inline-block py-2 px-3 text-white no-underline" href="/">HOME</a>
 					  </li>
 					  <li>
-						<a class="inline-block text-gray-600 no-underline hover:text-gray-200 hover:underline py-2 px-3" href="#">link</a>
+						<a class="inline-block text-gray-600 no-underline hover:text-gray-200 hover:underline py-2 px-3" href="/produtos">Produtos</a>
 					  </li>
 					  <li>
-						<a class="inline-block text-gray-600 no-underline hover:text-gray-200 hover:underline py-2 px-3" href="#">link</a>
+						<a class="inline-block text-gray-600 no-underline hover:text-gray-200 hover:underline py-2 px-3" href="/usuarios">usuarios</a>
 					  </li>
 						<li>
-						<a class="inline-block text-gray-600 no-underline hover:text-gray-200 hover:underline py-2 px-3" href="#">link</a>
+						<a class="inline-block text-gray-600 no-underline hover:text-gray-200 hover:underline py-2 px-3" href="/logout">Logout</a>
 					  </li>
 					</ul>
 				</div>
