--- a/templates/usuario_ver.html
+++ b/templates/usuario_ver.html
@@ -4,21 +4,23 @@
 {% block conteudo %}
 <p>Uresname: {{usuario.nome}}</p>
 
+
+    
 <form action="/usuario_atualiza" method="POST">
     <input type="hidden" name="id" value="{{usuario.id}}">
     <div>
-    Nome:
-        <input type="text" name="nome" value="{{usuario.nome}}">
+        <label for="first_name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Nome</label>
+        <input type="text" id="first_name" name="nome" value="{{usuario.nome}}" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
     </div>
     <div>
-    E-mail:
-        <input type="text" name="email" value="{{usuario.email}}">
+        <label for="last_name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Email</label>
+        <input type="email" id="last_name" name="email" value="{{usuario.email}}" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" >
     </div>
     <div>
-    Usename:
-        <input type="text" name="username" value="{{usuario.username}}">
-    </div>
-    <input type="submit" value="Atualizar">
+        <label for="company" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Username</label>
+        <input type="text" id="company" name="username" value="{{usuario.username}}" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" >
+    </div> 
+    <input type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" value="Atualizar">
     
 </form>
 
