--- a/templates/usuarios.html
+++ b/templates/usuarios.html
@@ -5,24 +5,30 @@
 
 {% block conteudo %}
 
-<table border="1">
-<tr>
-<th>Nome</th>
-<th>Adimin</th>
-<th>Ativo</th>
-</tr>
-{% for usr in user %}
+<table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
+    <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+    <tr>
+        <th scope="col" class="px-6 py-3">Nome</th>
+        <th scope="col" class="px-6 py-3">Adimin</th>
+        <th scope="col" class="px-6 py-3">Ativo</th>
+        <th scope="col" class="px-6 py-3">Funções</th>
+    </tr>
+    </thead>
+<tbody>
+    {% for usr in user %}
         <!-- Linha para repetição -->
-        <tr>
-            <td><a href="/usuario_ver/{{usr.id}}">{{ usr.username }}</td>
-            <td>{{ usr.admin }}</td>
-            <td>{{ usr.ativo }}</td>
-            <td><a href="/usuario_apagar/{{usr.id}}">Apagar</a></td>
+        <tr class="bg-white border-b dark:bg-gray-900 dark:border-gray-700">
+            <td class="px-6 py-5"><a href="/usuario_ver/{{usr.id}}">{{ usr.username }}</td>
+            <td class="px-6 py-5 text-midium">{{ usr.admin }}</td>
+            <td class="px-6 py-5">{{ usr.ativo }}</td>
+            <td class="px-6 py-5 font-medium text-blue-600 dark:text-blue-500 hover:underline"><a href="/usuario_apagar/{{usr.id}}">Apagar</a></td>
         </tr>
         <!-- Linha para repetição -->
         {% else %}
       
         {% endfor %}
+</tbody>
+
 </table>
 
 
